# svr_clean_arch

./: .env  .gitattributes  Cargo.toml  README.md
migrations/: 20240101000000_create_users_table.sql  20250122024645_create_users_table.sql  20250122064222_create_users_table.down.sql  20250122064222_create_users_table.up.sql
src/: app_state.rs  lib.rs  main.rs
src/api/: errors.rs  mod.rs  resp.rs
src/api/controllers/: auth.rs
src/api/dto/: auth.rs
src/entities/: errors.rs  mod.rs
src/entities/models/: auth.rs  user.rs
src/entities/repositories/: auth.rs
src/entities/services/: auth.rs
src/infrastructure/: mod.rs
src/infrastructure/databases/: postgresql.rs
src/infrastructure/repositories/: auth.rs  auth_repo.rs  mod.rs
src/infrastructure/utils/: jwt_util.rs  mod.rs
src/services/: auth.rs
svr/: README.md
svr/src/: app_state.rs
svr/src/api/: mod.rs  resp.rs
svr/src/api/controllers/: auth.rs
svr/src/entities/models/: auth.rs
svr/src/infrastructure/: mod.rs
svr/src/infrastructure/utils/: logger.rs  mod.rs
svr/src/services/: auth.rs
