[package]
name = "svr_clean_arch"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"

tokio = { version = "1.40.0", features = ["full"] }

sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "derive", "macros", "time"] }

dotenv = "0.15.0"
thiserror = "2.0.11"
env_logger = "0.11.5"
chrono = "0.4.38"
serde = { version = "1.0", features = [ "derive" ]}
serde_json = "1.0"